@@ -2,7 +2,8 @@ Changes for templates:
 
 Unreleased:
 
-  * The --mpds option to make-template.pl did not create new inputs (issue XXX).
+  * Load-average parsing did not work correctly at high load (issue 170).
+  * The --mpds option to make-template.pl did not create new inputs (issue 133).
   * The url and port were reversed in the Nginx commandline (issue 149).
   * Added $nc_cmd to ss_get_by_ssh.php (issue 154, issue 152).
   * InnoDB Transactions and other graphs showed NaN instead of 0 (issue 159).
